--- a/src/main/resources/bibleTranslationNames_pt.properties
+++ b/src/main/resources/bibleTranslationNames_pt.properties
@@ -2,3 +2,4 @@ webus=B\u00EDblia em ingl\u00EAs mundial
 kjv=B\u00EDblia do Rei Jaime
 rvr09=Reina-Valera
 tb=Tradu\u00E7\u00E3o Brasileira
+ntlh=Nova Tradução na Linguagem de Hoje
