finished implementing NTLH; all tests passing

--- a/src/main/resources/bibleTranslationNames_en.properties
+++ b/src/main/resources/bibleTranslationNames_en.properties
@@ -13,4 +13,4 @@ sven=Svenska 1917
 cunp=Chinese Union Version with New Punctuation
 krv=Korean Revised Version
 jc=Japanese Colloquial Bible
-ntlh=New Translation in the Language of Today (portuguese)
+ntlh=New Translation in the Language of Today
